--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -52,7 +52,7 @@
       <div class="items items--sell">
 
         <div class="visualization">
-          <ng-container *ngFor="let item of dataForSell.reverse(); let i = index">
+          <ng-container *ngFor="let item of dataForSell; let i = index">
             <div class="visual-item" [ngClass]="'red'" [style.width]="sellVisualizationArray[i] + '%'">
             <!--<div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, false) + '%'">-->
               <div class="border-container" *ngIf="i < 7 && withForChartLineElements && withForChartLineElements.sell.length">
@@ -62,7 +62,7 @@
             </div>
           </ng-container>
         </div>
-        <div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item, 'trading')">
+        <div class="item" *ngFor="let item of showSellDataRverse; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order">
             <span>
               {{item.total  | number:'1.1-8'| replaceNumber}}
@@ -138,7 +138,7 @@
       <div class="items items--buy">
 
         <div class="visualization">
-          <ng-container *ngFor="let item of dataBurBuy; let i = index">
+          <ng-container *ngFor="let item of buyVisualizationArray; let i = index">
             <div class="visual-item" [ngClass]="'green'" [style.width]="buyVisualizationArray[i] + '%'">
             <!--<div class="visual-item" [ngClass]="'green'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, true) + '%'">-->
               <div class="border-container" *ngIf="i > 0 && withForChartLineElements && withForChartLineElements.buy.length">
@@ -153,7 +153,7 @@
           <!--[style.height]="(200/dataBurBuy.length) + 'px'"></div>-->
         </div>
 
-        <div class="item" *ngFor="let item of dataBurBuy.reverse(); let i = index" (click)="onSelectOrder(i, item)">
+        <div class="item" *ngFor="let item of showBuyDataRverse; let i = index" (click)="onSelectOrder(i, item)">
           <div class="order">
             <span>
               {{item.total | number:'1.1-8' | replaceNumber}}
