--- a/src/assets/scss/components/_pair-popup.scss
+++ b/src/assets/scss/components/_pair-popup.scss
@@ -48,6 +48,11 @@
           left: 12px;
           background-color: #f5f5f5;
         }
+        ~.wrap-input__icon{
+          svg{
+            fill:$darker-blue;
+          }
+        }
       }
       &:valid{
         ~.wrap-input__label{
@@ -73,7 +78,6 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-height: 237px;
     overflow-y: scroll;
     overflow-x: hidden;
   }
@@ -140,28 +144,39 @@
       display: block;
     }
     &__header{
+      position: relative;
       flex-direction: row;
-      align-items: center;
       margin-top: 20px;
-      border-bottom: 1px solid $darker-blue;
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0px;
+        left: 292px;
+        z-index: -1;
+        width: calc(100% - 292px);
+        height: 1px;
+        background-color: $grey;
+      }
     }
     &__input{
       width: 260px;
       margin-right: 32px;
       .wrap-input__input{
-        border-color: $darker-blue;
         &:valid{
           ~.wrap-input__label{
             color: $darker-blue;
           }
         }
       }
-      .wrap-input__icon{
-        svg{
-          fill: $darker-blue;
-        }
+    }
+    &__tabs {
+      .tabs__item {
+        display: flex;
+        align-items: center;
+        padding: 0 16px;
       }
-      .wrap-input__line{
+      &:after{
         display: none;
       }
     }
@@ -175,6 +190,7 @@
     }
     &__content{
       padding-top: 24px;
+      max-height: 300px;
     }
     &__group{
       width: 200px;
@@ -216,6 +232,21 @@
             background-color: $dark-indigo;
             color: $light-blue;
           }
+          ~.wrap-input__icon{
+            svg{
+              fill:$light-blue;
+            }
+          }
+        }
+        &:focus{
+          ~.wrap-input__label{
+            background-color: $dark-indigo;
+          }
+          ~.wrap-input__icon{
+            svg{
+              fill:$light-blue;
+            }
+          }
         }
       }
       .wrap-input__icon{
@@ -233,6 +264,25 @@
   }
 }
 @media (min-width:1200px) {
-  .dark-theme{}
+  .dark-theme{
+    .pair-popup{
+      &__header{
+        &:after {
+          z-index: 1;
+          background-color: $light-grey;
+        }
+      }
+      &__tabs {
+        .tabs__item {
+          &--active{
+            border-bottom-color: $light-blue;
+            &:before{
+              border-color: $light-blue transparent transparent transparent;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 /*--- DARK THEME END---*/
