new fix in balances

--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -25,15 +25,15 @@
             <label class="wrap-input__label">Search</label>
             <div class="wrap-input__line"></div>
           </div>
-          <span>Price in</span>
-          <div class="dropdown">
-            <div class="dropdown__btn">USD</div>
-            <ul class="dropdown__list">
-              <li class="dropdown__item">RUB</li>
-              <li class="dropdown__item">EUR</li>
-              <li class="dropdown__item">UAH</li>
-            </ul>
-          </div>
+          <!--<span>Price in</span>-->
+          <!--<div class="dropdown">-->
+            <!--<div class="dropdown__btn">USD</div>-->
+            <!--<ul class="dropdown__list">-->
+              <!--<li class="dropdown__item">RUB</li>-->
+              <!--<li class="dropdown__item">EUR</li>-->
+              <!--<li class="dropdown__item">UAH</li>-->
+            <!--</ul>-->
+          <!--</div>-->
           <label class="toggler">
             <input type="checkbox" name="">
             <span class="toggler__indicate"></span>
@@ -857,21 +857,21 @@
           </label>
           <span>Hide zero balances</span>
         </div>
-        <div class="balance__show-all">
-          <label class="toggler">
-            <input type="checkbox" name="">
-            <span class="toggler__indicate"></span>
-          </label>
-          <span>Show all in</span>
-          <div class="dropdown">
-            <div class="dropdown__btn">USD</div>
-            <ul class="dropdown__list">
-              <li class="dropdown__item">RUB</li>
-              <li class="dropdown__item">EUR</li>
-              <li class="dropdown__item">UAH</li>
-            </ul>
-          </div>
-        </div>
+        <!--<div class="balance__show-all">-->
+          <!--<label class="toggler">-->
+            <!--<input type="checkbox" name="">-->
+            <!--<span class="toggler__indicate"></span>-->
+          <!--</label>-->
+          <!--<span>Show all in</span>-->
+          <!--<div class="dropdown">-->
+            <!--<div class="dropdown__btn">USD</div>-->
+            <!--<ul class="dropdown__list">-->
+              <!--<li class="dropdown__item">RUB</li>-->
+              <!--<li class="dropdown__item">EUR</li>-->
+              <!--<li class="dropdown__item">UAH</li>-->
+            <!--</ul>-->
+          <!--</div>-->
+        <!--</div>-->
 
       </div>
     </form>
@@ -883,6 +883,7 @@
         <th class="table__cell-head table__cell-head--tal">Currency</th>
         <th class="table__cell-head table__cell-head--tar">Available balance</th>
         <th class="table__cell-head table__cell-head--tar">Pending</th>
+        <th class="table__cell-head table__cell-head--tar">On Withdraw</th>
         <th class="table__cell-head table__cell-head--tar">On orders</th>
         <th class="table__cell-head table__cell-head--tar">Change %</th>
         <th class="table__cell-head table__cell-head--tac">Deposit</th>
@@ -902,6 +903,9 @@
             <span>BTC</span>
             <span class="balance__currency-name">Bitcoin</span>
           </div>
+        </td>
+        <td class="table__cell table__cell--tar">
+          <span>0</span>
         </td>
         <td class="table__cell table__cell--tar">
           <span>0</span>
