--- a/src/app/dashboard/components/chat/chat.component.html
+++ b/src/app/dashboard/components/chat/chat.component.html
@@ -26,9 +26,9 @@
   <div class="widget__content widget__content--show-all">
 
     <div class="widget__chat-wrap">
-      <perfect-scrollbar style="max-height: 380px;" #chat>
+      <perfect-scrollbar style="max-height: 380px;" #scrollWrapper>
         <div class="" *ngFor="let dateChatItem of dateChatItems">
-          <app-day-chat [dateChatItem]="dateChatItem"></app-day-chat>
+          <app-day-chat [dateChatItem]="dateChatItem" [scrollWrapper]="scrollWrapper"></app-day-chat>
         </div>
       </perfect-scrollbar>
     </div>
