forgot pass and fix orderbook and currency info dropdown

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,10 @@
           <app-registration-mobile-popup></app-registration-mobile-popup>
         </div>
 
+      <div *ngIf="isRecoveryPasswordPopupOpen">
+        <app-recovery-pass></app-recovery-pass>
+      </div>
+
         <router-outlet></router-outlet>
 
         <!--<a class="chat" href="#"> <img class="chat__icon" src="../../../assets/img/help.svg"></a>-->
