--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -91,7 +91,8 @@
     </form>
     <div class="popup__links-wrap">
       <a class="popup__link popup__link--hidden-mob" (click)="openRegistration()">Go to registration form</a>
-      <a class="popup__link" href="fgt.html">Forgot password?</a>
+      <a class="popup__link" (click)="openRecoveryPasswordPopup()">Forgot password?</a>
+      <!--<a class="popup__link" href="fgt.html">Forgot password?</a>-->
     </div>
     <a class="popup__link-mob" href="#">Registration</a>
   </div>
