--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -84,14 +84,6 @@
 }
 
 /*--- media start ---*/
-@media (min-width: 600px) {
-}
-
-@media (min-width: 900px) {
-  .currency-pair-info{
-
-  }
-}
 
 @media (min-width: 1200px) {
   .currency-pair-info {
@@ -107,6 +99,12 @@
     &__dropdown {
       .dropdown__btn {
         font-size: 24px;
+      }
+      .dropdown__list{
+        width: 100%;
+      }
+      .dropdown__item{
+        font-size: 18px;
       }
     }
     &__change-pair {
