--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -211,7 +211,8 @@
         content: "";
         left: 0;
         width: 100%;
-        height: 24px;
+        //height: 24px;
+        height: 100%;
         z-index: 0;
         opacity: 0;
         animation: markets-row 1s ease-in-out;
@@ -233,7 +234,8 @@
         content: "";
         left: 0;
         width: 100%;
-        height: 24px;
+        //height: 24px;
+        height: 100%;
         z-index: 0;
         opacity: 0;
         animation: markets-row 1s ease-in-out;
