fix table filters in orders

--- a/src/app/orders/open-orders/open-orders.component.scss
+++ b/src/app/orders/open-orders/open-orders.component.scss
@@ -153,21 +153,21 @@
 
   // search dropdown
 
-  .orders__search {
-    .search-results {
-      left: 60px;
-      .dropdown__list {
-        max-height: 170px;
-        overflow-x: unset;
-        overflow-y: scroll;
-      }
-    }
-
-    &:hover {
-      .search-results {
-        .dropdown__list {
-          display: block;
-        }
-      }
-    }
-  }
+  //.orders__search {
+  //  .search-results {
+  //    left: 60px;
+  //    .dropdown__list {
+  //      max-height: 170px;
+  //      overflow-x: unset;
+  //      overflow-y: scroll;
+  //    }
+  //  }
+  //
+  //  &:hover {
+  //    .search-results {
+  //      .dropdown__list {
+  //        display: block;
+  //      }
+  //    }
+  //  }
+  //}
