--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -54,13 +54,14 @@
       margin-left: 32px;
     }
     &__filters{
+      display: flex;
       position: relative;
       margin-top: 28px;
       &:after{
         content: '';
         display: block;
         position: absolute;
-        bottom: 0px;
+        bottom: 1px;
         z-index: -1;
         width: 100%;
         height: 1px;
