--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.scss
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.scss
@@ -1,24 +1,18 @@
-.popup__link{
-  span{
-    color: #8C8C9C;
-  }
-}
-
-.popup__btn.btn {
-  background-color: transparent !important;
-}
-
-.popup__btn.btn.bg-none{
-  background-color: #237BEF !important;
-}
-
-@media (min-width: 1200px){
-  .popup__links-wrap {
-    margin-top: 24px;
-    justify-content: center;
-  }
-}
+//
+//.bg-none{
+//  background-color: #237BEF;
+//  color:#fff;
+//  border-color: transparent;
+//}
+//
+//@media (min-width: 1200px){
+//  .popup__links-wrap {
+//    margin-top: 24px;
+//    justify-content: center;
+//    white-space: nowrap;
+//  }
+//}
 
 re-captcha{
-  margin: auto;
+  margin: 0 auto;
 }
