--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -11,6 +11,7 @@
         <div *ngIf="!inPineCodeMode; else showPinCode">
           <div class="wrap-input popup__wrap-input">
             <input
+              required
               class="wrap-input__input"
               type="text"
               formControlName="email"
@@ -36,6 +37,7 @@
 
           <div class="wrap-input popup__wrap-input">
             <input
+              required
               class="wrap-input__input"
               [type]="getInputType()"
               formControlName="password"
@@ -70,6 +72,7 @@
           <h4 class="popup__subtitle">{{ twoFaAuthModeMessage }}</h4>
           <div class="wrap-input popup__wrap-input">
             <input
+              required
               class="wrap-input__input"
               type="text"
               formControlName="pin"
@@ -94,7 +97,6 @@
     <div class="popup__links-wrap">
       <a class="popup__link popup__link--hidden-mob" (click)="openRegistration()">Go to registration form</a>
       <a class="popup__link" (click)="openRecoveryPasswordPopup()">Forgot password?</a>
-      <!--<a class="popup__link" href="fgt.html">Forgot password?</a>-->
     </div>
     <a class="popup__link-mob" href="#">Registration</a>
   </div>
