--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -7,9 +7,7 @@
   padding: 0 12px;
   border: 1px solid #A0A0A0 !important;
   border-bottom: none !important;
-  border-radius: 0px !important;
-  border-top-left-radius: 4px !important;
-  border-top-right-radius: 4px !important;
+  border-radius: 4px 4px 0 0!important;
   font-size: 14px;
 }
 
