--- a/src/app/balance/balance.component.html
+++ b/src/app/balance/balance.component.html
@@ -788,6 +788,8 @@
     <!--request-status-info end-->
   </div>
   <!--balance-mob end-->
+
+
   <!--balance-desktop start-->
   <div class="balance">
     <div class="page-title">
@@ -877,167 +879,181 @@
     </form>
     <!--filters end-->
     <!--table start-->
-    <table class="table">
-      <thead>
-      <tr>
-        <th class="table__cell-head table__cell-head--tal">Currency</th>
-        <th class="table__cell-head table__cell-head--tar">Available balance</th>
-        <th class="table__cell-head table__cell-head--tar">Pending</th>
-        <th class="table__cell-head table__cell-head--tar">On Withdraw</th>
-        <th class="table__cell-head table__cell-head--tar">On orders</th>
-        <th class="table__cell-head table__cell-head--tar">Change %</th>
-        <th class="table__cell-head table__cell-head--tac">Deposit</th>
-        <th class="table__cell-head table__cell-head--tac">Transfer</th>
-        <th class="table__cell-head table__cell-head--tac">Trade</th>
-        <th class="table__cell-head table__cell-head--tac">Withdraw</th>
-        <th class="table__cell-head table__cell-head--tac">History</th>
-      </tr>
-      </thead>
-      <tbody class="table__body">
-      <tr class="table__row balance__table-row">
-        <td class="table__cell">
-          <div class="balance__currency">
-            <div class="balance__currency-icon">
-              <img src="../../assets/img/btc-icon.svg">
-            </div>
-            <span>BTC</span>
-            <span class="balance__currency-name">Bitcoin</span>
-          </div>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <div class="balance__change">
-            <span class="txt-green">7.8</span>
-            <span class="arr arr--green"></span>
-          </div>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden">Deposit</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden">Transfer</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden">Trade</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden">Withdraw</button>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden">History</button>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+
+
+
+    <!--<table class="table">-->
+      <!--<thead>-->
+      <!--<tr>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Currency</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Available balance</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Pending</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">On Withdraw</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">On orders</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Change %</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac">Deposit</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac">Transfer</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac">Trade</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac">Withdraw</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac">History</th>-->
+      <!--</tr>-->
+      <!--</thead>-->
+      <!--<tbody class="table__body">-->
+      <!--<tr class="table__row balance__table-row">-->
+        <!--<td class="table__cell">-->
+          <!--<div class="balance__currency">-->
+            <!--<div class="balance__currency-icon">-->
+              <!--<img src="../../assets/img/btc-icon.svg">-->
+            <!--</div>-->
+            <!--<span>BTC</span>-->
+            <!--<span class="balance__currency-name">Bitcoin</span>-->
+          <!--</div>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>0</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>0</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>0</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>0</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<div class="balance__change">-->
+            <!--<span class="txt-green">7.8</span>-->
+            <!--<span class="arr arr&#45;&#45;green"></span>-->
+          <!--</div>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">Deposit</button>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">Transfer</button>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">Trade</button>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">Withdraw</button>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">History</button>-->
+        <!--</td>-->
+      <!--</tr>-->
+      <!--</tbody>-->
+    <!--</table>-->
+
+
+
     <!--table end-->
     <!--table requests start-->
-    <table class="table">
-      <thead>
-      <tr>
-        <th class="table__cell-head table__cell-head--tal">Date</th>
-        <th class="table__cell-head table__cell-head--tal">Currency</th>
-        <th class="table__cell-head table__cell-head--tar">Amount</th>
-        <th class="table__cell-head table__cell-head--tar">Comission</th>
-        <th class="table__cell-head table__cell-head--tar">Payment system</th>
-        <th class="table__cell-head table__cell-head--tar">Status</th>
-        <th class="table__cell-head table__cell-head--tac"></th>
-        <th class="table__cell-head table__cell-head--tac"></th>
-      </tr>
-      </thead>
-      <tbody class="table__body">
-      <tr class="table__row">
-        <td class="table__cell">
-          <div class="table__date-time">
-            <div>Th 13.06.2018</div>
-            <div>10:59:41</div>
-          </div>
-        </td>
-        <td class="table__cell">
-          <span>IDR</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0.01</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>0</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>CIMB NAGA</span>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <span>Awaits payment</span>
-        </td>
-        <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden">I paid</button>
-        </td>
-        <td class="table__cell table__cell--tar">
-          <button class="btn btn--center btn--small btn--hidden">Revoke</button>
-          <div class="revoke-request">
-            <div class="revoke-request__title">Are you sure you want to revoke this request?</div>
-            <div class="revoke-request__button-wrap">
-              <button class="btn btn--small">Yes</button>
-              <button class="btn btn--small">No</button>
-            </div>
-            <div class="revoke-request__triangle"></div>
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+
+
+    <!--<table class="table">-->
+      <!--<thead>-->
+      <!--<tr>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Date</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tal">Currency</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Amount</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Comission</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Payment system</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tar">Status</th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac"></th>-->
+        <!--<th class="table__cell-head table__cell-head&#45;&#45;tac"></th>-->
+      <!--</tr>-->
+      <!--</thead>-->
+      <!--<tbody class="table__body">-->
+      <!--<tr class="table__row">-->
+        <!--<td class="table__cell">-->
+          <!--<div class="table__date-time">-->
+            <!--<div>Th 13.06.2018</div>-->
+            <!--<div>10:59:41</div>-->
+          <!--</div>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<span>IDR</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>0.01</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>0</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>CIMB NAGA</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<span>Awaits payment</span>-->
+        <!--</td>-->
+        <!--<td class="table__cell">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">I paid</button>-->
+        <!--</td>-->
+        <!--<td class="table__cell table__cell&#45;&#45;tar">-->
+          <!--<button class="btn btn&#45;&#45;center btn&#45;&#45;small btn&#45;&#45;hidden">Revoke</button>-->
+          <!--<div class="revoke-request">-->
+            <!--<div class="revoke-request__title">Are you sure you want to revoke this request?</div>-->
+            <!--<div class="revoke-request__button-wrap">-->
+              <!--<button class="btn btn&#45;&#45;small">Yes</button>-->
+              <!--<button class="btn btn&#45;&#45;small">No</button>-->
+            <!--</div>-->
+            <!--<div class="revoke-request__triangle"></div>-->
+          <!--</div>-->
+        <!--</td>-->
+      <!--</tr>-->
+      <!--</tbody>-->
+    <!--</table>-->
+
+
     <!--table requests end-->
     <!--paginator start-->
-    <div class="row row--aic" style="margin: 20px 16px 0;">
-      <div class="show-filter">
-        Showing <span>1</span> to
-        <div class="dropdown">
-          <div class="dropdown__btn">14</div>
-          <ul class="dropdown__list">
-            <li class="dropdown__item">24</li>
-            <li class="dropdown__item">34</li>
-            <li class="dropdown__item">44</li>
-          </ul>
-        </div>
-        of <span>192</span> entries.
-      </div>
-      <ul class="paginator" style="margin-left: auto;">
-        <li class="paginator__item">
-          <a class="paginator__link paginator__link--arr" href="#">
-            <img class="paginator__arr-prev" src="../../assets/img/paginator-prev.svg" alt="prev">
-          </a>
-        </li>
-        <li class="paginator__item">
-          <a class="paginator__link" href="#">1</a>
-        </li>
-        <li class="paginator__item">
-          <a class="paginator__link" href="#">3</a>
-        </li>
-        <li class="paginator__item">
-          <a class="paginator__link" href="#">4</a>
-        </li>
-        <li class="paginator__item">
-          <a class="paginator__link" href="#">...</a>
-        </li>
-        <li class="paginator__item">
-          <a class="paginator__link" href="#">8</a>
-        </li>
-        <li class="paginator__item">
-          <a class="paginator__link paginator__link--arr" href="#">
-            <img class="paginator__arr-next" src="../../assets/img/paginator-next.svg" alt="next">
-          </a>
-        </li>
-      </ul>
-    </div>
+
+
+    <!--<div class="row row&#45;&#45;aic" style="margin: 20px 16px 0;">-->
+      <!--<div class="show-filter">-->
+        <!--Showing <span>1</span> to-->
+        <!--<div class="dropdown">-->
+          <!--<div class="dropdown__btn">14</div>-->
+          <!--<ul class="dropdown__list">-->
+            <!--<li class="dropdown__item">24</li>-->
+            <!--<li class="dropdown__item">34</li>-->
+            <!--<li class="dropdown__item">44</li>-->
+          <!--</ul>-->
+        <!--</div>-->
+        <!--of <span>192</span> entries.-->
+      <!--</div>-->
+      <!--<ul class="paginator" style="margin-left: auto;">-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link paginator__link&#45;&#45;arr" href="#">-->
+            <!--<img class="paginator__arr-prev" src="../../assets/img/paginator-prev.svg" alt="prev">-->
+          <!--</a>-->
+        <!--</li>-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link" href="#">1</a>-->
+        <!--</li>-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link" href="#">3</a>-->
+        <!--</li>-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link" href="#">4</a>-->
+        <!--</li>-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link" href="#">...</a>-->
+        <!--</li>-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link" href="#">8</a>-->
+        <!--</li>-->
+        <!--<li class="paginator__item">-->
+          <!--<a class="paginator__link paginator__link&#45;&#45;arr" href="#">-->
+            <!--<img class="paginator__arr-next" src="../../assets/img/paginator-next.svg" alt="next">-->
+          <!--</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+
+
     <!--paginator end-->
   </div>
   <!--balance-desktop end-->
