--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,8 @@
     <div class="logo"><a class="logo__link" href="#"><img class="logo__img" src="../../assets/img/logo.svg" alt="logo"></a></div>
     <ul class="menu menu--header-menu">
       <li class="menu__item"><a class="menu__link" href="https://exrates.me/dashboard"><span class="menu__link-text">Trade</span></a></li>
-      <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop"><span class="menu__link-text">Funds</span></a>-->
-      <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a>
+      <li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop"><span class="menu__link-text">Funds</span></a>
+      <!-- <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a> -->
         <div class="submenu">
           <ul class="menu submenu__list">
             <li class="submenu__item"><a class="submenu__link" routerLink="balance"><span class="menu__link-text">Balance</span></a></li>
@@ -13,8 +13,8 @@
           </ul>
         </div>
       </li>
-      <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop" ><span class="menu__link-text">Orders</span></a>-->
-      <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a>
+      <li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop" ><span class="menu__link-text">Orders</span></a>
+      <!-- <li class="menu__item menu__item--with-submenu"><a class="menu__link menu__link--drop" ><span class="menu__link-text">Orders</span></a> -->
         <div class="submenu">
           <ul class="menu submenu__list">
             <li class="submenu__item"><a class="submenu__link"  routerLink="open-orders"><span class="menu__link-text">Open orders</span></a></li>
@@ -22,8 +22,8 @@
           </ul>
         </div>
       </li>
-      <!--<li class="menu__item"><a class="menu__link" routerLink="/settings" *ngIf="isAuthenticated()"><span class="menu__link-text">Settings</span></a></li>-->
-      <li class="menu__item"><a class="menu__link" routerLink="/settings"><span class="menu__link-text">Settings</span></a></li>
+      <li class="menu__item"><a class="menu__link" routerLink="/settings" *ngIf="isAuthenticated()"><span class="menu__link-text">Settings</span></a></li>
+      <!-- <li class="menu__item"><a class="menu__link" routerLink="/settings"><span class="menu__link-text">Settings</span></a></li> -->
       <li class="menu__item menu__item--with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link--drop"><span class="menu__link-text">Referral</span></a>
         <div class="submenu">
           <ul class="menu submenu__list">
