--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -7,9 +7,8 @@
   @media (min-width:1200px) {
     display: block;
     flex-grow: 0;
-    // margin-top: -75px;
     height: 75px;
-    margin-top: 100px;
+    background-color: #24253F;
   }
 }
 
