--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="header__inner">
     <div class="logo"><a class="logo__link" href="#"><img class="logo__img" src="../../assets/img/logo.svg" alt="logo"></a></div>
     <ul class="menu menu--header-menu">
-      <li class="menu__item"><a class="menu__link" href="https://exrates.me/dashboard"><span class="menu__link-text">Trade</span></a></li>
+      <li class="menu__item"><a class="menu__link menu__link--active" href="https://exrates.me/dashboard"><span class="menu__link-text">Trade</span></a></li>
       <!--<li class="menu__item menu__item&#45;&#45;with-submenu" *ngIf="isAuthenticated()"><a class="menu__link menu__link&#45;&#45;drop"><span class="menu__link-text">Funds</span></a>-->
       <li class="menu__item menu__item--with-submenu" ><a class="menu__link menu__link--drop"><span class="menu__link-text">Funds</span></a>
         <div class="submenu">
