--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -95,7 +95,14 @@
           }
         }
       }
-
+      &--active{
+        color: rgba(255, 255, 255, 1);
+        .menu__link-text {
+          &:after {
+            opacity: 1;
+          }
+        }
+      }
       &--drop {
         &:after {
           display: inline-block;
