change height thead in markets-mob

--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -290,8 +290,8 @@
   }
   &__table-markets-mob {
     .table__cell-head {
-      padding-top: 8px;
-      padding-bottom: 8px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
     .table__row-star {
       svg {
@@ -773,6 +773,22 @@
       border-radius: 4px;
       width: 1px;
       height: 60%;
+    }
+    &__table-markets-mob {
+      .table__cell-head {
+        padding-top: 8px;
+        padding-bottom: 8px;
+      }
+      .table__row-star {
+        svg {
+          fill: #E5E5E5;
+        }
+      }
+      .table__row-star--select {
+        svg {
+          fill: #FFB74C;
+        }
+      }
     }
     &__trading-form {
       display: block;
