--- a/src/assets/scss/components/_pair-popup.scss
+++ b/src/assets/scss/components/_pair-popup.scss
@@ -191,6 +191,7 @@
     &__content{
       padding-top: 24px;
       max-height: 300px;
+      overflow: hidden;
     }
     &__group{
       width: 200px;
