--- a/src/app/dashboard/components/currency-pair-info/currency-search/currency-search.component.scss
+++ b/src/app/dashboard/components/currency-pair-info/currency-search/currency-search.component.scss
@@ -1,6 +1,12 @@
 perfect-scrollbar{
   height: 224px;
 }
-::ng-deep .ps__thumb-y {
-  background-color: #94C2FF !important;
+.pair-popup{
+  ::ng-deep .ps__thumb-y {
+    background-color: #94C2FF !important;
+  }
+  ::ng-deep .ps__rail-y {
+    margin-right: 0;
+  }
 }
+
