fix row desktop im markets

--- a/src/app/dashboard/components/markets/markets.component.scss
+++ b/src/app/dashboard/components/markets/markets.component.scss
@@ -77,18 +77,18 @@ position: fixed;
     .widget__table-row{
       height: auto;
     }
+
   }
   &__thead{
     display: flex;
     width: 100%;
     justify-content: space-between;
   }
-  &__tbody{
-  }
   &__row{
     display: flex;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
   }
 }
 @media (min-width: 1200px){
@@ -97,7 +97,11 @@ position: fixed;
       position: relative;
       margin-top: 4px;
       .widget__table-row{
-        height: 24px;
+        //height: 24px;
+      }
+      .table__cell{
+        line-height: 16px;
+        white-space: normal;
       }
     }
     &__thead{
@@ -109,11 +113,15 @@ position: fixed;
       //margin-right: 24px;
     }
     &__row{
-      display: flex;
       width: 100%;
+      min-height: 27px;
       &:hover{
           background-color: rgba(35, 123, 239, 0.1);
         .table__row-star{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0 auto;
           svg {
             display: inline-block;
           }
