--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -22,7 +22,7 @@
         </ul>
       </div>
     </div>
-    <div class="currency-pair-info__info"
+    <div class="currency-pair-info__info" style="min-width: 224px;"
          [ngClass]="{'currency-pair-info__info--up': flarForArrow('up'),
                      'currency-pair-info__info--down': flarForArrow('down')}">
       <div class="currency-pair-info__change">
@@ -34,15 +34,15 @@
       </div>
       <div class="currency-pair-info__price">{{!currentCurrencyInfo || !currentCurrencyInfo.currencyRate ? 0 :currentCurrencyInfo.currencyRate | replaceNumber:isFiat }} {{ secondCurrency }}</div>
     </div>
-    <div class="currency-pair-info__item">
+    <div class="currency-pair-info__item" style="min-width: 120px;">
       <div class="currency-pair-info__item-title">24h hight</div>
       <span class="currency-pair-info__item-value">{{!currentCurrencyInfo ? 0 :currentCurrencyInfo.rateHigh | number:'1.0-8' | replaceNumber }}</span>
     </div>
-    <div class="currency-pair-info__item">
+    <div class="currency-pair-info__item" style="min-width: 120px;">
       <div class="currency-pair-info__item-title">24h low</div>
       <span class="currency-pair-info__item-value">{{ !currentCurrencyInfo ? 0 :currentCurrencyInfo.rateLow | number:'1.0-8' | replaceNumber}}</span>
     </div>
-    <div class="currency-pair-info__item">
+    <div class="currency-pair-info__item" style="min-width: 180px;">
       <div class="currency-pair-info__item-title">24h volume</div>
       <span class="currency-pair-info__item-value"> {{!currentCurrencyInfo ?  0  : currentCurrencyInfo.volume24h | number:'1.0-0' | replaceNumber}} million  {{ firstCurrency }}</span>
     </div>
