--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,9 @@
 @import '../../assets/scss/variables';
 
+//.menu__link--active {
+//  border-bottom: 1px solid #E5E5E5;
+//}
+
 .header {
   display: none;
   /*--- modificators start ---*/
