--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -96,7 +96,7 @@
       padding: 0 32px;
     }
     &__pair {
-      //min-width: 225px;
+      min-width: 180px;
     }
     &__dropdown {
       .dropdown__btn {
